info do placeholder

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div id="calcA" class="tab-content active">
             <label for="valorInicialA">Insira o valor inicial (R$):</label>
-            <input type="number" id="valorInicialA" step="0.01" min="0" placeholder="Ex.: 500.00" required>
+            <input type="number" id="valorInicialA" step="0.01" min="0" placeholder="Valor sem os 2%" required>
             
             <label for="adultosA">Quantidade de adultos (máx. 4):</label>
             <input type="number" id="adultosA" min="0" max="4" value="0" placeholder="0 a 4" required>
@@ -114,7 +114,7 @@
 
         <div id="calcB" class="tab-content">
             <label for="valorInicialB">Insira o valor inicial (R$):</label>
-            <input type="number" id="valorInicialB" step="0.01" min="0" placeholder="Ex.: 500.00" required>
+            <input type="number" id="valorInicialB" step="0.01" min="0" placeholder="Valor com os 2%" required>
             
             <label for="adultosB">Quantidade de adultos (máx. 4):</label>
             <input type="number" id="adultosB" min="0" max="4" value="0" placeholder="0 a 4" required>
